More Guava and legacy class removal.